# grib-reanalysis-to-zarr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  variables_levels_overview.md
config/: config.yaml
danra_example/: config.yaml  find_gribs.py
danra_to_zarr/: __init__.py  cli.py  main.py  pipeline.py  variables_levels_overview.py
danra_to_zarr/pipeline/: __init__.py  base.py  collection.py  config.py  logging.py  utils.py
danra_to_zarr/utils/: print_versions.py
dini-example/: config.yaml  find_gribs.py
grib_reanalysis_to_zarr/: cli.py
grib_reanalysis_to_zarr/snakefile/: Snakefile
mera_example/: config.yaml  find_gribs.py
notebooks/: animation.ipynb  data_overview.ipynb  examine_data.ipynb  overview.ipynb  sample_analysis.ipynb  subsetting_in_space.ipynb
notebooks/development/: check_pipeline.ipynb  dask_parallel.ipynb  data_overview.ipynb  era5_google.ipynb  incomplete_files.ipynb  pipeline_issues.ipynb  zarr_filesize_distributions.ipynb
utils/: copy-to-scale.sh
