[project]
name = "danra_to_zarr"
version = "0.2.1"
description = "Process DANRA GRIB files to Zarr"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "rechunker>=0.5.2",
    "loguru>=0.7.2",
    "luigi>=3.4.0",
    "dmidc[harmonie-grib] @ git+https://gitlab.dmi.dk/nwp/data-catalog@v0.4.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.27.1",
    "nb-black @ git+https://github.com/leifdenby/nb_black/",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "nbconvert>=7.12.0",
    "pre-commit>=3.6.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
