[project]
name = "grib_reanalysis_to_zarr"
version = "0.1.0"
description = "Convert GRIB reanalysis files to Zarr with indexing and reference-based workflows"
dependencies = [
    "xarray",
    "isodate",
    "pyyaml",
    "zarr",
    "snakemake",
    "pulp<2.8.0",
]
requires-python = ">=3.10"

[project.scripts]
grib-reanalysis-to-zarr = "grib_reanalysis_to_zarr.cli:run_pipeline"
